# Bangla_chatbot_for_10MS

./: .gitignore  README.md  create_memory.py  create_memory_for_llm.py  main.py  production_ready.py  pyproject.toml  render.yaml  requirements.txt
api/: routes.py
bangla_pdf_vector_store/: index.pkl
bangla_pdf_vector_store/bangla_pdf_vector_store/: index.faiss  index.pkl
domain/: prompt.py
models/: query_models.py
service/: llm_service.py  qa_service.py  vectorstore_service.py
sessions/: 1.json  10.json  100.json  11.json  1101.json  111.json  1111.json  1121.json  12.json  2.json  202.json  22.json  435.json  test-session.json  test_session.json  test_session1.json
tests/: test_ask.py  test_history.py
utils/: config.py  logger.py  storage.py
vector_store/db_faiss/: index.faiss  index.pkl
