[project]
name = "new-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "groq>=0.25.0",
    "huggingface-hub>=0.31.2",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.2.0",
    "pypdf>=5.5.0",
    "pytest>=8.3.5",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
    "uvicorn[standard]>=0.30.1"
]
